--- a/src/app/calculators/car-economy-calc/components/compare/compare.component.html
+++ b/src/app/calculators/car-economy-calc/components/compare/compare.component.html
@@ -33,21 +33,21 @@
 <div class="display-result yellow d-flex">
     <div class="w-100 bg-green" style="width: 18rem;">
         <div class="text-center">
-            Gasto com seu carro próprio: R${{costOurCar?.total}} anualmente
+            Gasto com seu carro próprio: {{costOurCar?.total  | currencyFormat:'BRL':'currency_symbol':true}} anualmente
         </div>
       </div>
 </div>
 <div class="display-result yellow d-flex">
     <div class="w-100 bg-green" style="width: 18rem;">
         <div class="text-center">
-            Gasto caso substituísse por 99POP: R${{costPop?.total}} anualmente
+            Gasto caso substituísse por 99POP: {{costPop?.total  | currencyFormat:'BRL':'currency_symbol':true}} anualmente
         </div>
       </div>
 </div>
 <div class="display-result d-flex green">
     <div class="w-100 bg-green" style="width: 18rem;">
         <div class="text-center">
-            Economia anual de R${{costOurCar?.total - costPop?.total}}
+            Economia anual de {{costOurCar?.total - costPop?.total  | currencyFormat:'BRL':'currency_symbol':true}}
         </div>
       </div>
 </div>
